2010-03-18  Glenn Morris  <rgm@gnu.org>

	* hashcash.el (declare-function): Remove duplicate definition.

2010-03-17  Kevin Ryde  <user42@zip.com.au>

	* mml.el (mml-read-tag): Unquote values with `read' to reverse
	prin1 in mml-insert-tag (just stripping the quotes gave wrong
	value if any backslash escapes).

2010-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-charset-to-coding-system): Use coding-system-from-name
	if it is available.  (bug#5647)

	* lpath.el: Suppress compiler warning for coding-system-from-name for
	Emacs 21 and XEmacs.

2010-03-14  Juri Linkov  <juri@jurta.org>

	* hmac-def.el:
	* hmac-md5.el:
	* netrc.el: Fix keywords.

2010-02-26  Glenn Morris  <rgm@gnu.org>

	* message.el (message-send-mail-function): Change the default, so that
	it inherits from a customized send-mail-function.  (Bug#5643)

2010-02-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-treat-display-x-face): Don't burp if
	shell-command-to-string signals an error (bug#5299).

2010-02-24  Glenn Morris  <rgm@gnu.org>

	* message.el (message-smtpmail-send-it)
	(message-send-mail-with-mailclient): Doc fixes.

2010-02-16  Glenn Morris  <rgm@gnu.org>

	* message.el (message-default-mail-headers): Change the default value
	to ease the transition from mail-mode to message-mode.  (Bug#5555)

2010-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* parse-time.el (parse-time-syntax): Define it for only XEmacs.
	(parse-time-string-chars): Implement 2009-08-16 change for Emacs.

2010-01-18  Chong Yidong  <cyd@stupidchicken.com>

	* time-date.el (date-to-time): Doc fix (Bug#5408).

2010-01-17  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-mail): Just pass yank-action on to message-setup.
	(message-setup): Handle (FUN . ARGS) form of yank-action.
	(message-with-reply-buffer, message-widen-reply)
	(message-yank-original): Handle non-buffer values of
	message-reply-buffer (Bug#4080).
	(message-setup-1): Prefer to save message-reply-buffer as a buffer.
